--- a/vault-diff/pom.xml
+++ b/vault-diff/pom.xml
@@ -35,7 +35,7 @@
     <name>Apache Jackrabbit FileVault Diff (Diff utilities)</name>
     <description>Provides Classes for diff and diff3.
     </description>
-    <version>3.4.0</version>
+    <version>3.4.0-TESTMKDIRS</version>
     <packaging>bundle</packaging>
 
     <!-- ====================================================================== -->
