--- a/vault-rcp/pom.xml
+++ b/vault-rcp/pom.xml
@@ -30,7 +30,7 @@
     <!-- P R O J E C T  D E S C R I P T I O N                                   -->
     <!-- ====================================================================== -->
     <artifactId>org.apache.jackrabbit.vault.rcp</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.0-TESTMKDIRS</version>
     <packaging>bundle</packaging>
 
     <name>Apache Jackrabbit FileVault RCP Server Bundle</name>
