--- a/vault-vlt/pom.xml
+++ b/vault-vlt/pom.xml
@@ -30,7 +30,7 @@
     <!-- P R O J E C T  D E S C R I P T I O N                                   -->
     <!-- ====================================================================== -->
     <artifactId>vault-vlt</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.0-TESTMKDIRS</version>
     <packaging>jar</packaging>
 
     <name>Apache Jackrabbit FileVault Platform Interaction</name>
