--- a/vault-core/pom.xml
+++ b/vault-core/pom.xml
@@ -30,7 +30,7 @@
     <!-- P R O J E C T  D E S C R I P T I O N                                   -->
     <!-- ====================================================================== -->
     <artifactId>org.apache.jackrabbit.vault</artifactId>
-    <version>3.5.6</version>
+    <version>3.5.6-TESTMKDIRS</version>
 
     <name>Apache Jackrabbit FileVault Core Bundle</name>
     <description>The core classes of Apache Jackrabbit FileVault</description>
