--- a/vault-diff/pom.xml
+++ b/vault-diff/pom.xml
@@ -35,7 +35,7 @@
     <name>Apache Jackrabbit FileVault Diff (Diff utilities)</name>
     <description>Provides Classes for diff and diff3.
     </description>
-    <version>3.5.6</version>
+    <version>3.5.6-TESTMKDIRS</version>
 
     <!-- ====================================================================== -->
     <!-- D E P E N D E N C I E S                                                -->
