--- a/vault-hook-externalclass-test/pom.xml
+++ b/vault-hook-externalclass-test/pom.xml
@@ -30,7 +30,7 @@
     <!-- P R O J E C T  D E S C R I P T I O N                                   -->
     <!-- ====================================================================== -->
     <artifactId>vault-hook-externalclass-test</artifactId>
-    <version>3.5.6</version>
+    <version>3.5.6-TESTMKDIRS</version>
     <packaging>jar</packaging>
 
     <name>Apache Jackrabbit FileVault Package Hook Sling Example</name>
