--- a/target-osgi-environment/pom.xml
+++ b/target-osgi-environment/pom.xml
@@ -23,7 +23,7 @@
         <groupId>org.apache.jackrabbit.vault</groupId>
         <artifactId>parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>3.5.6</version>
+        <version>3.5.6-TESTMKDIRS</version>
     </parent>
 
     <!-- ====================================================================== -->
